@@ -2,11 +2,12 @@ Each utility has its own version number, date of last change and
 some description at the top of its ".c" file. All utilities in the main
 directory have their own "man" pages. There is also a sg3_utils man page.
 
-Changelog for sg3_utils-1.35 [20130109] [svn: r474]
+Changelog for sg3_utils-1.35 [20130110] [svn: r475]
   - sg_compare_and_write: new utility
   - sg_inq+sg_vpd: block device characteristics VPD page:
     add product_type, WABEREQ, WACEREQ and VBULS fields
   - sg_inq: more --export option changes for udev
+  - sg_vpd: add more rdac vendor specific vpd pages
   - sg_verify: add --ebytchk option for sbc3r34 changes
   - sg_stpg: --offline option: fix 'Invalid state 0xe'
   - sg_ses: Door Lock element changed to Door element and
